# wc3m.github.io

./: .envrc  .gitignore  .travis.yml  404.html  Makefile  book.toml  index.html  lec01sv.html  lec02ex.html  lec02sv.html  lec03ex.html  lec03sv.html  lec04sv.html  lec05sv.html  lec06sv.html  lec07sv.html  lec1sv.html  lec2sv.html  lecture_01.html  lecture_02.html  lecture_03.html  lecture_1.html  logistics.html  overview.html  print.html  pyproject.toml  readme.md  searchindex.js  searchindex.json  shell.nix
css/: custom.css
nix/: sources.json
src/: SUMMARY.md  glossary.md  lec01sv.md  lec02ex.md  lec02sv.md  lec03ex.md  lec03sv.md  lec04sv.md  lec05sv.md  lec06sv.md  lec07sv.md  lec1sv.md  lec2sv.md  lec3ex.md  lec3sv.md  lecture_03.md  lecture_1.md  lecture_2.md  lecture_3.md  logistics.md  overview.md
theme/: index.hbs
