[tool.poetry]
name = "w3mnotes"
version = "0.1.0"
description = "Lecture notes for Water, Chemicals and more with Computers for Chemistry (WC3m)"
authors = ["Rohit Goswami <rgoswami@ieee.org>","Amrita Goswami <amritag@iitk.ac.in"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.21"
poetry = "^1.0.10"
jupyter-book = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
